tests/baselines/reference/parameterPropertyInConstructor2.errors.txt
parameterPropertyInConstructor2.ts(3,5): error TS2394: This overload signature is not compatible with its implementation signature.
parameterPropertyInConstructor2.ts(3,17): error TS2369: A parameter property is only allowed in a constructor implementation.
parameterPropertyInConstructor2.ts(4,24): error TS2300: Duplicate identifier 'names'.


==== parameterPropertyInConstructor2.ts (3 errors) ====
    module mod {
      class Customers {
        constructor(public names: string);
        ~~~~~~~~~~~
!!! error TS2394: This overload signature is not compatible with its implementation signature.
!!! related TS2750 parameterPropertyInConstructor2.ts:4:5: The implementation signature is declared here.
                    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
        constructor(public names: string, public ages: number) {
                           ~~~~~
!!! error TS2300: Duplicate identifier 'names'.
        }
      }
    }
    